Remove duplicate entry